# lrm_carina

lrm_controller/: CMakeLists.txt  plugins.xml
lrm_controller/include/lrm_controller/: steering_controller.h
lrm_controller/include/robot_state/: joint_state_listener.h  robot_state_publisher.h  treefksolverposfull_recursive.h
lrm_controller/launch/: simBotTeleopKeyboard.launch
lrm_controller/src/: carina_controller.cpp  cmd_vel_to_messages.cpp  pose_velocity_node.cpp  static_transform_publisher.cpp  teleop_keyboard.cpp
lrm_controller/src/robot_state/: robot_state_publisher.cpp
lrm_gazebo/: CMakeLists.txt  manifest.xml
lrm_gazebo/include/: AckermannControllerPlugin.h  sensor_model.h
lrm_gazebo/include/hector_gazebo_plugins/: gazebo_ros_imu.h  sensor_model.h
lrm_gazebo/launch/: build_terrain.launch  empty_world.launch  gazebo.launch  mapEmptyWorld.launch  simBotEmptyWorld.launch  test_gaz_worlds.launch  visualization.launch
lrm_gazebo/params/: carina_4w_suspension.yaml
lrm_gazebo/src/: AckermannControllerPlugin.cpp  AckermannPlugin.cpp  CarinaController.cpp  CarinaWorldPlugin.cpp  DRCVehiclePlugin.cc  EncodersController.cpp  GPSPlugin.cpp  SuspensionController.cpp  gazebo_ros_imu.cpp  gazebo_ros_magnetic.cpp  projector.cc  simBotBaseAckermannController.cpp  viz_gazebo_models_node.cpp
lrm_gazebo/worlds/: greece.world  heightmap.world  old_empty.world  orchard.world  orchard14.world  orchard_trees.world  orchard_way.world  pathway.world  pathway2.world  terrain-trees-obstacles.world  terrain-trees-uneven.world
lrm_navigation/: CMakeLists.txt  manifest.xml
lrm_navigation/config/: base_local_planner_params.yaml  costmap_common_params.yaml  local_costmap_params.yaml
lrm_navigation/config/sbpl/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  sbpl_global_params.yaml
lrm_navigation/launch/: navigation_sbpl.launch  obstacle_avoidance.launch
lrm_navigation/src/: obstacle_avoidance.cpp  send_goal.cpp
lrm_navigation/worlds/: blank_cm_map.yaml  carina_25mm.mprim
lrm_planning/costmap_2d/: CMakeLists.txt
lrm_planning/costmap_2d/src/: costmap_2d_publisher.cpp  costmap_2d_ros.cpp  observation_buffer.cpp
lrm_planning/move_base/: CMakeLists.txt
lrm_planning/move_base/src/: move_base.cpp
lrm_sbpl/: CMakeLists.txt  mainpage.dox  manifest.xml
lrm_sbpl/include/sbpl/: config.h
lrm_sbpl/src/discrete_space_information/: environment_navxythetalat.cpp
lrm_sbpl/src/planners/: adplanner.cpp  araplanner.cpp
lrm_sbpl/src/utils/: 2Dgridsearch.cpp  utils.cpp
lrm_sensors/: CMakeLists.txt  modifiedstereoaccuracy.ods
lrm_sensors/cfg/: CloudScan.cfg  CloudScan.cfgc
lrm_sensors/docs/: CloudScanConfig.dox  CloudScanConfig.wikidoc
lrm_sensors/include/: cFindPlane.h
lrm_sensors/src/: cloud_to_scan.cpp  fake_clock_node.cpp  free_cloud_node.cpp  multi_image_node.cpp
lrm_sensors/src/nodelets/: split_bb2_nodelet.cpp  split_bumblebee.cpp  split_xb3_nodelet.cpp
lrm_ui/: CMakeLists.txt  manifest.xml
lrm_ui/AnalogWidgets/: AnalogWidgets.pro  Flags.pri
lrm_ui/AnalogWidgets/analogwidgets/: analogwidgets.pro
lrm_ui/AnalogWidgets/analogwidgets/code/: Makefile  bitmapbutton.cpp  chart.cpp  code.pro  manometer.cpp
lrm_ui/AnalogWidgets/analogwidgets/plugins/: Makefile  plugins.pro
lrm_ui/AnalogWidgets/scripttool/: Makefile
lrm_ui/include/analogwidgets/: chart.h
lrm_ui/include/analogwidgets/chart/: channel.h
lrm_ui/src/ihm/: main.cpp  main_window.cpp  qnode.cpp
trunk/generic_packages/: CMakeLists.txt  mainpage.dox  manifest.xml
trunk/generic_packages/launch/: basic.launch  parvo.launch  plot.txt  retinal.launch
trunk/generic_packages/src/: ns3_sim.cpp  retinaDemo.cpp  sba_from_file.cpp  sba_system_setup.cpp  stitching_detailed.cpp  two_gps_log.cpp  viz_image_node.cpp  wifi_sim.cpp
trunk/gpsd_viewer/: CMakeLists.txt  gui.glade  manifest.xml
trunk/gpsd_viewer/demo/: demo.launch
trunk/gpsd_viewer/launch/: adhoc.launch  carina.launch  two_gps_view.launch
trunk/gpsd_viewer/src/: gpsd_pose_viewer.cpp  gpsd_viewer.cpp
trunk/gpsd_viewer/src/gui/: callbacks.cpp  gpsd_viewer_osd.c  osd-utils.c
trunk/lrm_drivers/: CMakeLists.txt  manifest.xml
trunk/lrm_drivers/include/lrm_drivers/: roboteq.h
trunk/lrm_drivers/launch/: carina1_teleop.launch  joy_teleop.launch
trunk/lrm_drivers/src/: AX2550.cpp  cruise_control.cpp  nav_message_node.cpp  roboteq_node.cpp  serial.cpp  throttle.cpp  vcmdas1_throttle.cpp
trunk/lrm_rbb_grupo_c/: CMakeLists.txt  mainpage.dox  manifest.xml  rbbsim.rviz  rbbsim_multi.rviz
trunk/lrm_rbb_grupo_c/include/: aco.h  antenna.h  bussola.h  constantes.h  gps.h  item.h  mymath.h  obstaculo.h  rna.h  spirit.h  veiculo.h
trunk/lrm_rbb_grupo_c/launch/: antenna.launch  beacon_nav.launch  description.launch  gazebo.launch  move_base.launch  multiple_simulation.launch  robombeiros.launch  robot_model.launch  rviz.launch  single_simulation.launch  teleop_keyboard.launch
trunk/lrm_rbb_grupo_c/msg/: Signal.msg
trunk/lrm_rbb_grupo_c/settings/: antenna.yaml  beacon_nav.yaml
trunk/lrm_rbb_grupo_c/src/: aco.cpp  antenna.cpp  antenna_node.cpp  beacon_nav_node.cpp  bussola.cpp  gps.cpp  item.cpp  main.cpp  main_aco.cpp  move_base_simple.cpp  multi_move_base_simple.cpp  mymath.cpp  obstaculo.cpp  rna.c  veiculo.cpp
trunk/lrm_rbb_grupo_c/urdf/: antenna.urdf  armadillidium.dae  robot.urdf  simple.urdf
trunk/lrm_rbb_grupo_c/wolrd/: world.world
trunk/lrm_rbb_grupo_c/worlds/: empty.world
trunk/lrm_wrappers/: CMakeLists.txt
trunk/lrm_wrappers/src/: plane_segment.cpp  retinal_node.cpp
trunk/ogreimp/: .cproject  .project  .pydevproject  CMakeLists.txt  cmake_install.cmake  mainpage.dox  manifest.xml
trunk/ogreimp/catkin_generated/: 05.catkin-test-results.sh.develspace.context.py  env_cached.sh  generate_cached_setup.py  setup_cached.sh
trunk/ogreimp/devel/: .catkin  .rosinstall  env.sh  setup.bash  setup.sh  setup.zsh
trunk/ogreimp/gtest/: Makefile
trunk/ogreimp/src/: ogreimp.cpp
trunk/ros/lrm_carina/lrm_octomap_server/: CMakeLists.txt  logodds.ods  mainpage.dox  manifest.xml  (+1 more)
(+1828 files in other folders)
